--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -34,7 +34,8 @@ anoma = {path = "../shared", default-features = false, features = ["testing"]}
 anoma_vm_env = {path = "../vm_env", default-features = false}
 chrono = "0.4.19"
 concat-idents = "1.1.2"
-# TODO temp fork for https://github.com/informalsystems/ibc-rs/issues/1161
+# TODO temp fork for borsh coding
+# Also, using the same version of tendermint-rs as we do here.
 ibc = {git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/abci++-v0.23.0", features = ["mocks", "borsh"], optional = true}
 ibc-abci = {package = "ibc", git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/rebase_v0.23.0", features = ["mocks", "borsh"], optional = true}
 ibc-proto = {git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/abci++-v0.23.0", optional = true}
